# project-helper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TESTING_CHECKLIST.md  docker-compose.yml  nginx.conf
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: analyzer.py  config.py  database.py  deps.py  errors.py  llm.py  main.py  observability.py  source_scan.py
backend/app/agents/: __init__.py  code_agent.py  report_agent.py
backend/app/core/: repository.py  source_scan.py  symbol_index.py
backend/app/llm/: client.py  observability.py
backend/app/memory/: __init__.py  checkpointer.py
backend/app/prompts/: agent_system_prompt.md  manager.py  report_prompt.md
backend/app/routers/: analysis.py  auth.py  chat.py  projects.py  source.py
backend/app/services/: analysis.py  chat.py
backend/app/tools/: __init__.py  file_ops.py  schemas.py  search.py  symbols.py
backend/app/utils/: errors.py  guardrails.py  sse.py
backend/tests/e2e/: test_api_core_flow.py
backend/tests/eval/: checks.py  conftest.py  golden_cases.py  test_chat_quality.py  test_report_quality.py
backend/tests/unit/: test_analyzer.py  test_database.py  test_error_handling.py  test_guardrails.py  test_llm.py  test_observability.py  test_prompts.py  test_repository.py  test_source_scan.py  test_symbol_index.py  test_symbol_tools.py
docs/: PROJECT_TECHNICAL_SUMMARY.md  TESTING_CHECKLIST.md  agent-workflow-architecture.md  frontend-architecture.md  technical-notes.md
frontend/: .env.production  package-lock.json  (+3 more)
(+44 files in other folders)
